# tinystr

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  annotated_dup.js  char__repr_8c.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  globals.html  index.dox  navtreedata.js  str_8c.js  structstring__list.html  tinystr_8h.js  tinystr_8h_source.html
.github/workflows/: cmake.yml  doxygen.yml
docs/: annotated.html  char__repr_8c.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  functions.html  functions_vars.html  globals_func.html  index.html  navtreeindex0.js  str_8c.html  strlist_8c.html  strlist_8c.js  structstring__list.js  structstring__t.html  structstring__t.js  tinystr_8h.html
docs/search/: all_0.js  all_2.js  all_4.js  classes_0.js  files_2.js  functions_1.js  variables_0.js
include/: tinystr.h
search/: all_1.js  all_6.js  all_8.js  files_0.js  files_1.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_1.js
src/: CMakeLists.txt  char_repr.c  str.c  strings.c  strlist.c  tinystr.c  tinystr.h
tests/: CMakeLists.txt  test_char_repr.cpp  test_string_list.cpp  test_strings.cpp  test_tinystr.cpp
